# AmberEngine

./: CMakeLists.txt  README.md
AmberEditor/: CMakeLists.txt
AmberEditor/src/: main.cpp
AmberEngineCore/: CMakeLists.txt
AmberEngineCore/includes/AmberEngineCore/: Application.hpp  Event.hpp  Log.hpp
AmberEngineCore/includes/AmberEngineCore/Utils/: test.hpp
AmberEngineCore/src/AmberEngineCore/: Application.cpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
AmberEngineCore/src/AmberEngineCore/Utils/: test.cpp
